fix of alignment

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,8 +24,8 @@
 
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  // align-items: center;
+  // justify-content: center;
   gap: 40px;
 
   @media screen and (min-width: 768px) {
@@ -36,9 +36,8 @@
   @media screen and (min-width: 1440px) {
     padding-left: 24px;
     padding-right: 24px;
-    display: flex;
+
     flex-direction: row;
-    justify-content: none;
   }
 }
 // CSS for sidebar navigation <div>
@@ -47,7 +46,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
+  // justify-content: center;
   gap: 40px;
   margin-bottom: 40px;
 
