--- a/src/sass/sidebar.scss
+++ b/src/sass/sidebar.scss
@@ -77,7 +77,7 @@ a {
 }
 .category-list {
   display: flex;
-  // flex-direction: column;
+  flex-direction: column;
   gap: 40px;
 
   @media screen and (min-width: 768px) {
